[gd_scene load_steps=20 format=3 uid="uid://08t55cdhhfpt"]

[ext_resource type="Script" path="res://Scripts/Cars/maluch/maluch.gd" id="1_w25ec"]
[ext_resource type="Texture2D" uid="uid://bja5f1kyekcbh" path="res://Assets/Objects/cars/maluch/body.png" id="2_8tf6w"]
[ext_resource type="Texture2D" uid="uid://ndfncjdx4jwl" path="res://Assets/Objects/cars/maluch/kolo_p.png" id="3_xpvro"]
[ext_resource type="Texture2D" uid="uid://bujjc5es8b8mm" path="res://Assets/Objects/cars/maluch/driver.png" id="4_pneex"]
[ext_resource type="PackedScene" uid="uid://csnc7omlt1dsf" path="res://Scenes/Cars/maluch/smoke_particles.tscn" id="5_lk2sk"]
[ext_resource type="AudioStream" uid="uid://bqg07pm27pcgn" path="res://Assets/Sounds/engine_1.wav" id="6_txscb"]
[ext_resource type="Texture2D" uid="uid://k7uep3dh00dm" path="res://Assets/Avatars/stary_ysol1.png" id="7_oj8qd"]

[sub_resource type="Animation" id="Animation_vv5q0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-142, 74)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.28319]
}

[sub_resource type="Animation" id="Animation_etvfv"]
resource_name = "rotate"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-142, 74), Vector2(-142, 74)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l3jmw"]
_data = {
"RESET": SubResource("Animation_vv5q0"),
"rotate": SubResource("Animation_etvfv")
}

[sub_resource type="Animation" id="Animation_tvbcf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(172, 73)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.28319]
}

[sub_resource type="Animation" id="Animation_17ojm"]
resource_name = "rotate"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(172, 73), Vector2(172, 73)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vwrbo"]
_data = {
"RESET": SubResource("Animation_tvbcf"),
"rotate": SubResource("Animation_17ojm")
}

[sub_resource type="Animation" id="Animation_4shkl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_kmycd"]
resource_name = "head_rotate"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.1, 1.8348, 2.1, 2.3061, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.261799, 0.0, -0.294968, -0.0872665, -0.309501, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 1.3, 1.8348, 2.1, 2.3061, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-2, -16), Vector2(-2, -5), Vector2(-2, -16), Vector2(-2, -16), Vector2(-2, -16), Vector2(-2, -16), Vector2(-2, -16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n8ord"]
_data = {
"RESET": SubResource("Animation_4shkl"),
"head_rotate": SubResource("Animation_kmycd")
}

[sub_resource type="Animation" id="Animation_k77j5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-90, -21)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.174533]
}

[sub_resource type="Animation" id="Animation_bcr7w"]
resource_name = "rotate"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0, 0.174533, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-90, -21), Vector2(-90, -21), Vector2(-90, -21), Vector2(-90, -21), Vector2(-90, -21)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2pvec"]
_data = {
"RESET": SubResource("Animation_k77j5"),
"rotate": SubResource("Animation_bcr7w")
}

[node name="maluch" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 16
motion_mode = 1
script = ExtResource("1_w25ec")

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource("2_8tf6w")

[node name="Kolo_l" type="Sprite2D" parent="."]
position = Vector2(-142, 74)
rotation = 6.28319
scale = Vector2(0.350516, 0.350516)
texture = ExtResource("3_xpvro")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Kolo_l"]
libraries = {
"": SubResource("AnimationLibrary_l3jmw")
}

[node name="Kolo_p" type="Sprite2D" parent="."]
position = Vector2(172, 73)
rotation = 6.28319
scale = Vector2(0.334534, 0.334534)
texture = ExtResource("3_xpvro")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Kolo_p"]
libraries = {
"": SubResource("AnimationLibrary_vwrbo")
}

[node name="Driver" type="Sprite2D" parent="."]
position = Vector2(-2, -16)
scale = Vector2(0.390722, 0.390722)
texture = ExtResource("4_pneex")
offset = Vector2(-2.33281, -79.3155)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Driver"]
libraries = {
"": SubResource("AnimationLibrary_n8ord")
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(57, -93, 123.4, -22.9, 235, -2, 239, 56, 217, 79, 201.7, 36.9, 168.2, 28.8, 132, 51, 121, 91, -87, 88.9, -94, 64, -128, 32, -173, 39, -197, 76, -225, 70, -241, 9, -131, -96)

[node name="smoke_particles" parent="." instance=ExtResource("5_lk2sk")]
position = Vector2(-225, 71)
amount = 16
lifetime = 1.0
randomness = 0.63
lifetime_randomness = 0.82

[node name="snd_engine" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_txscb")
volume_db = 5.229

[node name="Boss" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(-90, -21)
rotation = -0.174533
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_oj8qd")
offset = Vector2(5, -130)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boss"]
libraries = {
"": SubResource("AnimationLibrary_2pvec")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="snd_player" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
